Add tool to extract game files
Extract ARZ, ARC, decompile map and convert tex to dds